--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.3.0",
+    "@clerk/themes": "^2.1.19",
     "@liveblocks/client": "^2.4.0",
     "@liveblocks/react": "^2.4.0",
     "@liveblocks/react-lexical": "^2.4.0",
